--- a/v1/embedded/intro.mdx
+++ b/v1/embedded/intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Introduction
 ---
 
 Most SaaS applications have a need to integrate with other systems and offer these integrations to their customers,
