style: remove superfluous like

--- a/v1/api-reference/proxy-api/use-cases.mdx
+++ b/v1/api-reference/proxy-api/use-cases.mdx
@@ -10,7 +10,7 @@ This is most useful when building an Embedded Integration Hub and you need to ma
 user's behalf in order to provide the best user experience.
 
 For example, if you want to provide your own End Users the ability to connect your SaaS platform to an external system,
-say like Slack, you may want the user to choose from a list of channels to post messages to. Before the Proxy API, each
+like Slack, you may want the user to choose from a list of channels to post messages to. Before the Proxy API, each
 use-case like this required a specific workflow to be implemented in your Integration. Now, you can use the Proxy API to
 make requests to the Slack API directly from your application and show the results to the user.
 
