style: few style changes

--- a/v2/embedded/sdk/embed-react/getting-started.mdx
+++ b/v2/embedded/sdk/embed-react/getting-started.mdx
@@ -6,12 +6,14 @@ title: Getting Started
 
 To get started with the Versori Embedded SDK for React, you need to install the package. You can do this using npm or yarn:
 
-```bash
+<CodeGroup>
+```bash npm
 npm install @versori/embed-react
 ```
-```bash
+```bash yarn
 yarn add @versori/embed-react
 ```
+</CodeGroup>
 
 # Usage
 
