--- a/v2/embedded/sdk/quick-start.mdx
+++ b/v2/embedded/sdk/quick-start.mdx
@@ -8,11 +8,6 @@ This quickstart guuide uses our React SDK to embed a native integration hub into
 <Note>
     The React SDK is the quickest way to get started with Versori Embedded, however it also offers the least amount of
     control over the UI.
-
-    If your UI has more bespoke requirements, it's recommended to learn more about [how Versori Embedded
-    works](/v1/embedded/how-it-works) and then follow the [Developers Introduction](/v1/embedded/developer/intro) to
-    choose the best implementation method for your application.
-
 </Note>
 
 <Warning>
@@ -21,10 +16,8 @@ This quickstart guuide uses our React SDK to embed a native integration hub into
     There are limitations in this approach at the time of writing, but we are working on improving this functionality
     in future releases:
 
-    - Only the first page of integrations are displayed
-    - Connection Variables are not supported
-    - Integration Variables are not supported
-
+    - There is no pagination support for the integration hub as of now
+    - Dynamic Variables are not supported
 </Warning>
 
 Before you start, it's expected that you already have a React application. If not, we recommend using
@@ -33,20 +26,19 @@ Before you start, it's expected that you already have a React application. If no
 Next, install our SDK packages using your package manager of choice:
 
 <CodeGroup>
-```bash NPM
+```bash npm
 npm install @versori/embed-react
 ```
 
-```bash Yarn
+```bash yarn
 yarn add @versori/embed-react
 ```
+</CodeGroup>
 
 <Warning>
     Ensure that at least version `2.x.x`+ of the `@versori/embed-react` package is installed, as this is the version
     that supports the platform API.
 </Warning>
-
-</CodeGroup>
 
 Now you can render our `VersoriEmbeddedProvider` component in your application, and pass in some configuration:
 
