chore: initial user-guide structure with some plan sections written

--- a/v2/embedded/sdk/introduction.mdx
+++ b/v2/embedded/sdk/introduction.mdx
@@ -49,9 +49,9 @@ Before building your integration hub, you will need to have the following:
 - At least one deployed Integration created in the Versori platform.
 - Chosen an implementation method covered [above](#choosing-your-embedded-implementation).
 
-{/\*\* TODO: The below section needs work because we also need API's to support this. It follows in much the same way as
-hubs in the old world. But we need an equivalent of ListEndUserIntegrations that lists environments from a users
-perspective.
+[comment]: <> (TODO: The below section needs work because we also need API's to support this. It follows in much the
+same way as hubs in the old world. But we need an equivalent of ListEndUserIntegrations that lists environments from a
+users perspective.)
 
 ## Build
 
@@ -69,7 +69,10 @@ This section provides step-by-step instructions for activating an integration fo
     The diagram below outlines the process of activating an integration for one of your end users:
 
     <Frame>
-        <img src="./activation-activity-diagram.svg" alt="activity diagram for activating an integration"/>
+        <img
+            src="/legacy/embedded/developer/activation-activity-diagram.svg"
+            alt="activity diagram for activating an integration"
+        />
     </Frame>
 
 </Accordion>
