--- a/latest/releases/2025/08/plan-connect-build-deploy.mdx
+++ b/latest/releases/2025/08/plan-connect-build-deploy.mdx
@@ -1,7 +1,12 @@
 ---
-title: Introducing "Plan, Connect, Build, Deploy"
+title: "Introducing "Plan, Connect, Build, Deploy""
 ---
 
-In this release, there's some major changes to how Projects are built so warrants it's own dedicated
+In this release, there's some major changes to how Projects are built so warrants it's own dedicated\
 release page.
 
+Blah
+
+<Note>
+  Hi\!
+</Note>
