--- a/latest/guides/getting-started/plan.mdx
+++ b/latest/guides/getting-started/plan.mdx
@@ -13,14 +13,21 @@ The first step in building an integration is to plan the scope, this includes:
 Users start by providing as much information about their integration as possible and uploading any attachments, this can
 include screenshots, diagrams, PDF/Word documents, or even OpenAPI specifications.
 
-<Frame>
+<Frame className="max-w-xl mx-auto">
     <img src="/images/guides/plan/getting-started-001.png" />
 </Frame>
 
 Once the details above are submitted, Versori uses AI to perform in-depth research of the requirements and provides a
 detailed plan of how the integration will be implemented.
 
-## Research stage
+## Research agent
+
+The research agent is an AI agent trained to perform research on integration requirements. The majority of the "Plan"
+stage is conducted by the research agent, it is able to read through the information provided by the user and perform a
+series of actions to identify the requirements of the integration including searching the web and internal knowledge
+bases.
+
+The research agent process is split into the following steps:
 
 <Steps>
     <Step title="Extract, Analyse & Search">
@@ -33,31 +40,40 @@ detailed plan of how the integration will be implemented.
         which can be extracted and analysed in a loop until the agent is satisfied that all information has been
         gathered.
 
-        This produces two documents, an integration summary and technical resources.
+        <Frame className="max-w-2xl mx-auto">
+            <img src="/images/guides/plan/hs-qs-plan-progress-002.png" />
+        </Frame>
 
-        <Frame>
-            <img src="/images/guides/plan/research-agent-001.png" />
+        Once the research agent has completed, a summary of the integration is produced and and outstanding questions
+        are presented to the user.
+    </Step>
+    <Step title="Summary">
+        Here you can see the summary of the integration and a technical resources document. Review these documents to 
+        ensure the proposed solution is correct and complete.
+
+        <Frame className="max-w-2xl mx-auto">
+            <img src="/images/guides/plan/hs-qs-plan-complete-001.png" />
         </Frame>
     </Step>
     <Step title="Questions">
-        The user is prompted to answer any outstanding questions which cannot be answered by the information
-        gathered.
+        The AI may also produce some additional questions which it has identified as important to the success of the
+        integration.
 
         These questions vary in importance, some questions are highly recommended to be answered before continuing,
         but other questions can be left blank and Versori will make assumptions based on the other information
         gathered.
 
-        <Frame>
-            <img src="/images/guides/plan/questions-001.png" />
+        <Frame className="max-w-2xl mx-auto">
+            <img src="/images/guides/plan/hs-qs-plan-questions-001.png" />
         </Frame>
 
         For more information on answering questions, see the [Questions](/latest/guides/getting-started/plan/questions) guide.
     </Step>
     <Step title="Next Steps">
         At this point, the user may choose next steps, either to start building the integration, or to refine the
-        requirements by answering the outstanding questions and/or prompting with more
+        requirements by answering the outstanding questions and/or prompting with more information.
 
-        <Frame>
+        <Frame className="max-w-2xl mx-auto">
             <img src="/images/guides/plan/next-steps-001.png" />
         </Frame>
     </Step>
@@ -72,10 +88,11 @@ detailed plan of how the integration will be implemented.
 </Note>
 
 After the initial research step, you may notice the "Connect" tab has a badge denoting the number of Systems which have
-been identified and requires configuration.
+been identified and requires configuration. The badge is only visible when the Connect tab requires attention, once the
+systems are connected the badge will disappear.
 
-<Frame>
-    <img src="/images/guides/plan/connect-toolbar-001.png" />
+<Frame className="max-w-xl mx-auto">
+    <img src="/images/guides/plan/connect-toolbar-002.png" />
 </Frame>
 
 Our [Connect](/latest/guides/getting-started/connect) guide covers how to connect your systems, and how to manage these
@@ -83,7 +100,7 @@ connections over time.
 
 ## Generate Workflows
 
-In addition to the Systems which require connecting, there is also a call-to-action to "Generate Workflows", which will
+Looking back to the "Next Steps" image above, there is also a call-to-action to "Generate Workflows", which will
 generate separate requirements prompts for each of the workflows which have been identified for your integration.
 
 These prompts can then be entered into the "Build" tab to start building the actual workflows.
