feat(sdk): first draft of SDK docs and links to JSR

--- a/latest/run-sdk/latest/developers/overview.mdx
+++ b/latest/run-sdk/latest/developers/overview.mdx
@@ -1,10 +1,32 @@
 ---
-title: Overview
+title: Developers Overview
+sidebarTitle: Overview
 ---
 
-This section is aimed at developers who are building integrations via the Versori Platform, and want to understand more
-about how the SDK is implemented to build more complex integrations which the AI cannot handle.
+Our full SDK documentation is available from our JSR package, [@versori/run](https://jsr.io/@versori/run).
 
-## Quick Introduction
+## Installation
 
-There are two ways to trigger
+Our SDK is available on both [NPM](https://www.npmjs.com/package/@versori/run) and [JSR](https://jsr.io/@versori/run):
+
+### NPM
+
+```bash
+npm install @versori/run
+```
+
+### Yarn
+
+```bash
+yarn add @versori/run
+```
+
+### Deno
+
+```bash
+deno add jsr:@versori/run
+
+# or if you really want to use NPM from deno...
+deno add npm:@versori/run
+```
+
