chore: remove some unfinished pages

--- a/latest/releases/2025/08/plan-connect-build-deploy.mdx
+++ b/latest/releases/2025/08/plan-connect-build-deploy.mdx
@@ -2,11 +2,4 @@
 title: Introducing "Plan, Connect, Build, Deploy"
 ---
 
-In this release, there's some major changes to how Projects are built so warrants it's own dedicated\
-release page.
-
-Blah
-
-<Note>
-  Hi\!
-</Note>
+TBC
