--- a/v2/embedded/security.mdx
+++ b/v2/embedded/security.mdx
@@ -14,7 +14,7 @@ button. On key creation, you will be able to copy or download your private key a
 the page, you will be unable to view your private key ever again. You should keep the private key secret, obviously!
 
 <Frame caption="How to create a signing key">
-    <img src="/images/signingkey.png" />
+    <img src="/images/signingkeys.png" />
 </Frame>
 
 The keys are in PKCS #8 format. It is with this private key that your backend should use to sign JWTs for your end users
